force-app/main/default/objects/LiveChatTranscript/LiveChatTranscript.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>