force-app/main/default/objects/LiveChatTranscript/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <formula>TEXT(Case.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Name</label>
    <type>Text</type>
</CustomField>