force-app/main/default/objects/LiveChatTranscript/fields/SCQuickSetup__CurrentEmail__c.field-meta.xml
<CustomField>
    <fullName>SCQuickSetup__CurrentEmail__c</fullName>
    <label>CurrentEmail</label>
    <type>Email</type>
</CustomField>