force-app/main/default/objects/LiveChatTranscript/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>LiveChatVisitor</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>