force-app/main/default/objects/LiveChatTranscript/listViews/Chat_Queue_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Chat_Queue_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat Queue</label>
    <queue>Chat_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>