force-app/main/default/objects/LiveChatTranscript/listViews/Live_Agent_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Live_Agent_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Chat</label>
    <queue>Live_Agent</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>